# pyviewer-extended

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo_docking_viewer.py  demo_docking_viewer_3panels.py  demo_remote_siv.py
src/pyviewer_extended/: __init__.py  multi_textures_viewer.py
src/pyviewer_extended/remote/: __init__.py  __main__.py  schema.py  server.py  siv.py  ui.py
