[project]
name = "pyviewer-extended"
version = "0.5.0"
description = "On the shoulders of giants, this package adds some additional features to the original PyViewer package."
readme = "README.md"
authors = [{ name = "Shinei Arakawa", email = "arakawashinei1115@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["pyviewer"]
license = { file = "LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
pyviewer = { git = "https://github.com/harskish/pyviewer.git" }
radpsd = { git = "https://github.com/ShineiArakawa/radpsd.git" }

[dependency-groups]
remote = [
    "fastapi[all]>=0.115.13",
    "httpx>=0.28.1",
    "radpsd",
    "uvicorn[standard]>=0.34.3",
]
